@startuml mapping-03-booking-payments-ratings
title Relational Mapping — Booking, Payments & Ratings

skinparam linetype ortho
hide circle
skinparam class {
  BackgroundColor White
  BorderColor #2563eb
}

entity "Users" as users <<ref · Identity ctx>> #EEEEEE {
  *Id : uniqueidentifier <<PK>>
}

entity "Availabilities" as av {
  *Id : uniqueidentifier <<PK>>
  --
  ConsultantId : uniqueidentifier <<FK>>
  IsRecurring : bit
  IsActive : bit
}

entity "Bookings" as bk {
  *Id : uniqueidentifier <<PK>>
  --
  StudentId : uniqueidentifier <<FK>>
  ConsultantId : uniqueidentifier <<FK>>
  AvailabilityId : uniqueidentifier <<FK, NULL>>
  PaymentId : uniqueidentifier <<FK, NULL>>
  ScheduledStartAt : datetimeoffset <<UK slot>>
  PriceUsd : decimal
  Status : int
}

entity "Payments" as pay {
  *Id : uniqueidentifier <<PK>>
  --
  PayerUserId : uniqueidentifier <<FK>>
  PayeeUserId : uniqueidentifier <<FK, NULL>>
  PayoutId : uniqueidentifier <<FK, NULL>>
  RelatedBookingId : uniqueidentifier <<FK, NULL>>
  RelatedApplicationId : uniqueidentifier <<FK, NULL>>
  Type : int
  Status : int
  AmountCents : bigint
  IdempotencyKey : nvarchar <<UK>>
}

entity "Payouts" as po {
  *Id : uniqueidentifier <<PK>>
  --
  PayeeUserId : uniqueidentifier <<FK>>
  AmountCents : bigint
  Status : int
  IncludedPaymentIdsJson : nvarchar
}

entity "ConsultantReviews" as rev {
  *Id : uniqueidentifier <<PK>>
  --
  BookingId : uniqueidentifier <<FK>>
  ConsultantId : uniqueidentifier <<FK>>
  StudentId : uniqueidentifier <<FK>>
  Rating : int
  IsHiddenByAdmin : bit
}

entity "SessionRecordings" as rec {
  *Id : uniqueidentifier <<PK>>
  --
  BookingId : uniqueidentifier <<FK>>
  RecordingId : nvarchar
  StoragePath : nvarchar
}

entity "StripeWebhookEvents" as swe <<standalone · no FK>> {
  *Id : uniqueidentifier <<PK>>
  --
  StripeEventId : nvarchar <<UK>>
  EventType : nvarchar
  IsProcessed : bit
}

entity "ProfitShareConfigs" as psc <<standalone · no FK>> {
  *Id : uniqueidentifier <<PK>>
  --
  PaymentType : int
  Percentage : decimal
}

entity "FinancialConfigRules" as fcr <<standalone · no FK>> {
  *Id : uniqueidentifier <<PK>>
  --
  PaymentType : int
  Status : int
}

' ----- intra-context FKs -----
av  |o--o{ bk
bk  ||--o| pay
bk  ||--o| rev
bk  ||--o{ rec
po  |o--o{ pay

' ----- cross-context FKs -----
users ||--o{ av  : ConsultantId
users ||--o{ bk  : Student / Consultant
users ||--o{ pay : PayerUserId
users ||--o{ po  : PayeeUserId

note bottom of pay
  FIX (review): Payment is polymorphic — RelatedBookingId OR
  RelatedApplicationId — and carries Payer/Payee + Payout FKs.
  CompanyReviewRequests.PaymentId points here too (see Scholarships map).
end note

note top of swe
  StripeWebhookEvents / ProfitShareConfigs / FinancialConfigRules are
  standalone config & event-log tables — no foreign keys by design.
end note
@enduml
